# deepRWCap

./: .gitignore  README.md
datasets/: download_datasets.sh
deepRWCap/: .gitignore  Makefile  models.txt  run_script.py
deepRWCap_binaries/: models.txt  run_script.py
executable/: models.txt  run_script.py
ggft/: .gitignore  README.md  makefile  run_ggft.sh
ggft/plot/: 3dcube_gap.py  grf.py  numpyplot_example.py
ggft/src/: dielectric_generator.h  ggft_solver.cpp  ggft_solver.h  main.cpp
inference_cpp/: .gitignore  CMakeLists.txt  models.txt
inference_cpp/src/: cuda_kernels.cpp  cuda_kernels.cu  cuda_kernels.h  dnn_solver.cpp  dnn_solver.h  dnn_solver_gradient.cpp  dnn_solver_greens.cpp  dnn_solver_poisson.cpp  main.cpp  parallel_sampler.cpp
models/: GradientSelectorNoPESoftmax0_tensorrt_fp16.jit  GreensSelectorNoPESoftmax_tensorrt_fp16.jit  Medium3Gradient2NormMSE_tensorrt_fp16.jit  TinyGradient1NormMSE_tensorrt_fp16.jit  TinyGreensReLUKL_tensorrt_fp16.jit  download_models.sh
testcases/cap3d/: case1.cap3d  case10.cap3d  case11.cap3d  case12.cap3d  case13.cap3d  case14.cap3d  case2.cap3d  case3.cap3d  case3bak1.cap3d  case3bak2.cap3d  case4.cap3d  case5.cap3d  case6.cap3d  case7.cap3d  case8.cap3d  case9.cap3d  case9_12.cap3d  case9_17.cap3d  case9_27.cap3d  case9_32.cap3d  case9_42.cap3d  case9_52.cap3d  case9_62.cap3d  case9_7.cap3d  case9_72.cap3d  case9_8.cap3d  case9_82.cap3d
testcases/cap3d/ref/: case1.dspf  case10.spice  case11.dspf  case12.dspf  case2.dspf  case3.dspf  case4.dspf  case5.dspf  case6.dspf  case7.dspf  case8.dspf  case9.dspf  case9_12.dspf  case9_17.dspf  case9_27.dspf  case9_32.dspf  case9_42.dspf  case9_52.dspf  case9_62.dspf  case9_7.dspf  case9_72.dspf  case9_82.dspf
training_pytorch/: .gitignore  run_ablation_study.sh  run_compilation.sh  run_training.sh
training_pytorch/src/: ablation.py  architecture.py  architecture_ablation.py  dataset.py  main.py  saveModel.py  train.py
